# boke

boke/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  requirements.txt  需求文档.md  项目文档.md
gupiao/: .env  .env.example  README.md  requirements.txt  run.sh  start.sh  test_install.py  开发文档.md  股票_基金数据监控+AI解读面板需求文档.md
jianshen/: README.md  需求文档.md
rag_share/: .dockerignore  .env.example  .gitignore  deploy.exp  deploy.sh  docker-compose.yml  需求文档.md
relaxagent/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
relaxagent/backend/: pyproject.toml
relaxagent/backend/app/: main.py
relaxagent/backend/app/application/chat/: services.py
relaxagent/backend/app/domain/agent/: entities.py  repositories.py
relaxagent/backend/app/domain/chat/: entities.py  exceptions.py  gateways.py  repositories.py  services.py
relaxagent/backend/app/infrastructure/persistence/: agent_repository.py  database.py  models.py  session_repository.py
relaxagent/backend/app/infrastructure/providers/: anthropic_gateway.py  base.py  openai_gateway.py  provider_registry.py
relaxagent/backend/app/presentation/: dependencies.py
relaxagent/backend/app/presentation/api/: error_handlers.py
relaxagent/backend/app/presentation/api/v1/: router.py
relaxagent/backend/app/presentation/api/v1/routes/: agents.py  chat.py  providers.py  sessions.py
relaxagent/backend/app/presentation/schemas/: agent.py  chat.py  session.py
relaxagent/backend/app/shared/: config.py
wolf/: AI机器人狼人杀Web项目需求文档.md  DEV_HANDOFF.md  README.md  (+3 more)
(+172 files in other folders)
